2006-08-25  Raja R Harinath  <rharinath@novell.com>

	* TODO: Remove 'List' entries.
	* src/Makefile.am (libeglib_la_SOURCES): Add sort.frag.h.
	* src/sort.frag.h: New.  Implements a "generic" bottom-up "counting"
	mergesort that works both on singly- and doubly-linked lists.
	* src/gslist.c (g_slist_sort): Use it.
	* src/glist.c (g_list_sort): Likewise.
	* src/glib.h (g_slist_sort, g_list_sort): Declare.
	* test/slist.c, test/list.c: Add basic testcases.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/gspawn.c: propagate errors from reads.
	* src/gpath.c: an empty PATH is like a NULL one.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/tests.h:
	* test/timer.c:
	* test/Makefile.am:
	* TODO:
	* src/glib.h:
	* src/gtimer.c:
	* src/Makefile.am: implemented GTimer.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/tests.h:
	* test/Makefile.am:
	* test/spawn.c:
	* src/gspawn.c:
	* src/glib.h:
	* src/Makefile.am: initial implentation of g_spawn_command_line_sync.
	Still need better error handling, but works for the most part.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/garray.c: grow faster so that the 'big' test does not crawl.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/shell.c:
	* src/gqueue.c: plugged leaks.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/path.c:
	* src/gpath.c: when PATH is not defined, the current dir is used.
	See execvp(3).

2006-08-25  Alp Toker  <alp@atoker.com>

	* src/gstr.c: g_strv_length() should return guint, not gint
	* src/glib.h: Add g_strv_length() prototype
	
2006-08-24  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c (g_get_home_dir, g_get_tmp_dir, g_get_user_name,
	g_get_prgname, g_set_prgname): implemented.

	* test/ Fix leaks.
	
	* src/gpath.c (g_get_current_dir): Implement.

	(g_find_program_in_path, g_path_is_absolute): implement.
	
	Add g_path_get_dirname, g_path_get_basename

	* src/gpath.c: Path routines
